--- a/index.html
+++ b/index.html
@@ -1,2 +1,41 @@
 
 <doctype! HTML>
+<html>
+<head>
+  <meta charset="utf-8">
+  <title> Funk Show </title>
+  <link rel="stylesheet" href="reset.css">
+  <link rel="stylesheet" href="index.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+</head>
+<body>
+
+  <section id="accordion" class="accordion">
+	  <header>
+		  <h1 class="trigger">Boss Nacho</h1>
+    </header>
+
+    <article class="content">
+    <p> Serving up spicy melodies and savory grooves </p>
+    </article>
+
+      <ul class="subaccordion">
+				<li>
+					<h4 class="trigger">Originals</h4>
+					<div class="content">
+            <p>Love Song, Jam Song, Rock Song</p></div>
+				</li>
+				<li>
+					<h4 class="cbp-nttrigger">Covers</h4>
+					<div class="content"><p>Paragraph of Cover Songs</p></div>
+		    </li>
+        <li>
+					<h4 class="trigger">Collaborations</h4>
+					<div class="content"><p>Paragraph of Collaborators</p></div>
+				</li>
+			</ul>
+
+		</section>
+  <script src="index.js"></script>
+</body>
+</html>
